# Jett

./: .gitignore  Dockerfile.easyocr  Dockerfile.ppocrv4-mobile  Dockerfile.ppocrv4-server  Dockerfile.rapidocr  Dockerfile.webui  README.md  build_images.py  pyproject.toml
.github/workflows/: build-images.yml
app/: __init__.py  main.py
app/api/: ocr.py
app/core/: client.py  config.py
app/models/: ocr.py
app/services/: __init__.py  base.py  easyocr_service.py  ppocrv4_mobile_service.py  ppocrv4_server_service.py  rapidocr_service.py
app/static/: app.js  index.html  style.css
helm/: README.md
helm/jett/: Chart.yaml  values.yaml
helm/jett/templates/: easyocr-deployment.yaml  easyocr-service.yaml  ingress.yaml  namespace.yaml  ppocrv4mobile-deployment.yaml  ppocrv4mobile-service.yaml  ppocrv4server-deployment.yaml  ppocrv4server-service.yaml  rapidocr-deployment.yaml  rapidocr-service.yaml  webui-deployment.yaml  webui-service.yaml
serving/easyocr/: main.py
serving/glm_ocr/: main.py
serving/ppocrv4_mobile/: main.py
serving/ppocrv4_server/: main.py
serving/rapidocr/: main.py
